--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -344,7 +344,7 @@ footer h3 {
 
 footer .footer-above {
     padding-top: 50px;
-    background-color: #B91E9E
+    background-color: #2c3e50
 
 }
 
